alpm-types/src/snapshots/name::invalid_shared_object_name_parser@case_1.snap
---
source: alpm-types/src/name.rs
---
error: invalid suffix
 | 
 | noso
 | ~~~~^ expected shared object name suffix '.so'
 | 
 = while parsing:
   shared object name: (noso)
   → invalid suffix
   → expected shared object name suffix '.so'
