alpm-types/src/snapshots/openpgp::invalid_packager@case_1_no_name.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
error: invalid alpm packager
 | 
 | <foobar@mcfooface.org>
 | ^ expected a packager name
