alpm-types/src/snapshots/openpgp::invalid_packager@case_3_no_wrapped_address.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
error: invalid Email address
 | 
 | Foobar McFooface
 |                 ^ expected opening delimiter '<'
 | 
 = while parsing:
   alpm packager: (Foobar McFooface)
   └ Email address: ()
     → expected opening delimiter '<'
