alpm-types/src/snapshots/path::invalid_soname_lookup_directory_parser@case_1.snap
---
source: alpm-types/src/path.rs
---
error: invalid delimiter
 | 
 | lib
 | ~~~^ expected shared library delimiter `:`
 | 
 = while parsing:
   soname lookup directory: (lib)
   → invalid delimiter
   → expected shared library delimiter `:`
